2007-07-16  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/AccountManagement.cs: Added code to grab an existing gabble
	  connection if it exists

2007-07-16  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Removed un-needed spaces

2007-07-16  Calvin Gaisford <calvinrg@gmail.com> 

	* data/images/webcam.png, data/images/Makefile.am,
	  data/images/video.png, Banter/PersonCard.cs, Banter/Makefile.am:
	  Changed video.png to webcam.png

2007-07-16  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp: Updated project
	* data/images/text.png, data/images/video.png: added text and video png
	* data/images/Makefile.am: Added text and video images
	* Banter/UriList.cs: new class to handle drag and drop
	* Banter/PersonCard.cs: Swapped out the Person Card HTML stuff
	* Banter/PersonView.cs: Updated PersonView to not update so often
	* Banter/Makefile.am: Added StatusEntry and UriList

2007-06-14  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/NotificationManager.cs: Hacked NotificationManager to deal
	  with media streams coming and going on pending conversations

2007-06-14  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac, data/Makefile.am, data/sounds, data/sounds/notify.wav,
	  data/sounds/banter.wav, data/sounds/Makefile.am: Added sounds
	* Banter/NotificationManager.cs: Updated NotificationManager to handle
	  additional messages coming in from a person who's chat has not been
	  accepted
	* Banter/Defines.cs.in: Added a sound directory
	* Banter/GroupWindow.cs: Added ability to say Banter when window opens

2007-06-14  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp, configure.ac, Banter/Makefile.am: Added Notify Sharp
	  dependency
	* Banter/NotificationManager.cs: New Object to handle all notifications
	  on Banter...well, this is the beginning of that
	* Banter/ChatWindowManager.cs: Removed handling of incoming
	  conversations which is now done in the notification manager